# rust-git

./: Cargo.toml  Makefile  rgit  rust-git  wyag-tests.sh
src/: blob.rs  cli.rs  commit.rs  ignore.rs  index.rs  lib.rs  log.rs  main.rs  object.rs  repository.rs  status.rs  tag.rs  tree.rs
