[package]
name = "rgit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytes = "1.10.0"
clap = { version = "4.5.30", features = ["derive"] }
flate2 = "1.0.35"
glob = "0.3.2"
hex = "0.4.3"
indexmap = "2.7.1"
num-bigint = "0.4.6"
regex = "1.11.1"
rust-ini = "0.21.1"
sha1 = "0.10.6"
walkdir = "2.5.0"
